--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -9,28 +9,35 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="responsible_id"/>
                         </group>
                         <notebook>
                             <page string="Description">
                                 <field name="description"/>
                             </page>
-                            <page string="About">
-                                This is an example of notebooks
-                            </page>
+                            <page string="Sessions">
+                                <field name="session_ids">
+                                    <tree string="Registered sessions">
+                                        <field name="name"/>
+                                        <field name="instructor_id"/>
+                                    </tree>
+                                </field>
+                           </page>
                         </notebook>
                     </sheet>
                 </form>
             </field>
         </record>
 
-        <record model="ir.ui.view" id="course_search_view">
-            <field name="name">course.search</field>
+        <!-- override the automatically generated list view for courses -->
+        <record model="ir.ui.view" id="course_tree_view">
+            <field name="name">course.tree</field>
             <field name="model">openacademy.course</field>
             <field name="arch" type="xml">
-                <search>
+                <tree string="Course Tree">
                     <field name="name"/>
-                    <field name="description"/>
-                </search>
+                    <field name="responsible_id"/>
+                </tree>
             </field>
         </record>
         <!-- window action -->
@@ -72,13 +79,33 @@
                 <form string="Session Form">
                     <sheet>
                         <group>
-                            <field name="name"/>
-                            <field name="start_date"/>
-                            <field name="duration"/>
-                            <field name="seats"/>
+                            <group string="General">
+                                <field name="course_id"/>
+                                <field name="name"/>
+                                <field name="instructor_id"/>
+                            </group>
+                            <group string="Schedule">
+                                <field name="start_date"/>
+                                <field name="duration"/>
+                                <field name="seats"/>
+                            </group>
                         </group>
+                        <label for="attendee_ids"/>
+                        <field name="attendee_ids"/>
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <!-- session tree/list view -->
+        <record model="ir.ui.view" id="session_tree_view">
+            <field name="name">session.tree</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <tree string="Session Tree">
+                    <field name="name"/>
+                    <field name="course_id"/>
+                </tree>
             </field>
         </record>
 
